[gd_scene load_steps=2 format=3 uid="uid://c07g5nt5q0nmb"]

[ext_resource type="Script" path="res://UI/Menu/pause_menu.gd" id="1_fqqfx"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_fqqfx")

[node name="Contents" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -83.5
offset_right = 136.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Contents"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="MenuButton" type="Button" parent="Contents"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Menu"

[node name="QuitButton" type="Button" parent="Contents"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="button_up" from="Contents/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="Contents/MenuButton" to="." method="_on_menu_button_button_up"]
[connection signal="button_up" from="Contents/QuitButton" to="." method="_on_quit_button_button_up"]
